Added Most of Online Comps

--- a/LnLWebEndSystem/Styles/style.css
+++ b/LnLWebEndSystem/Styles/style.css
@@ -179,3 +179,9 @@
     .reg-form .inputTextnputText::-moz-placeholder {
         color: #aaa;
     }
+
+    chkRememberMe {
+        width: 2rem;
+        height: 2rem;
+        padding-right: 1rem;
+    }
