--- a/LnLWebEndSystem/Styles/general.css
+++ b/LnLWebEndSystem/Styles/general.css
@@ -1,6 +1,7 @@
 ﻿/********************/
 /*******GENERAL*******/
 /********************/
+/*E Coetzee - 34374469*/
 
 .container {
     max-width: 1600px;
